--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,11 @@
     html{
         @apply bg-purple-300
     }
+
+    p {
+        @apply text-sm md:text-lg xl:text-xl;
+    }
+    h2 {
+        @apply text-xl md:text-2xl xl:text-3xl font-semibold;
+    }
   }
