adjust section paddings

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#__next {
+	width: 100%;
+	overflow-y: auto;
+}
+
 @layer components {
 	html {
 		@apply bg-purple-300;
